[package]
name = "slang-template"
version = "0.1.0"
edition = "2021"

[dependencies]
datatest-stable = "0.3.2"
itertools = "0.14.0"
regex = "1.11.2"
slang-ui = { git = "https://github.com/oembo-sse/slang" }
tokio = { version = "1.47.1", features = ["full"] }

[[test]]
name = "tests"
harness = false
